--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -2,3 +2,6 @@ $--disabled-color: #8d8989;
 $--main-font-size: 14px;
 $--big-font-size: 24px;
 $--large-font-size: 32px;
+
+$--desktop-max-width: 1024px;
+$--mobile-max-width: 768px;
